--- a/app/views/profile/wall.phtml
+++ b/app/views/profile/wall.phtml
@@ -18,7 +18,7 @@
                     <div class="col-md-1 text-center first">
                         <form action="/file/download" method="post">
                             <input type="hidden" name="fileName" value="<?= $note['file'] ?>">
-                            <button type="submit" class="btn btn-default">
+                            <button title="Назва файла <?= $note['file'] ?>" type="submit" class="btn btn-default">
                                 <i class="glyphicon glyphicon-save"></i>
                             </button>
                         </form>
